--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           margin-right: auto;
         "
       />
-      <h2>This Page is just a placeholder to test that GitHub Pages was configured correctly!</h2>
+      <h2 style="text-align: center">This Page is just a placeholder to test that GitHub Pages was configured correctly!</h2>
     </main>
   </body>
 </html>
